--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -48,6 +48,8 @@ rogue_logging = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
+fast_image_resize = { workspace = true }
+image = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 
